--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <!-- FIFTH ROW OF BUTTONS-->
                 <button class="empty" id="empty"></button>
                 <button class="number" id="0">0</button>
-                <button class="operator" id="."></button>
+                <button class="empty" id="empty"></button>
                 <button class="operator" id="=">=</button>
 
             </div>
